Added place deletion
