# api/controllers/place-controller.ts
@@ -34,9 +34,29 @@ export async function retrievePlaces(req: Request, res: Response): Promise<void>
 export async function retrieveById(req: Request, res: Response): Promise<void> {
     const placeId: string = req['swagger'].params['placeId'].value;
     const place = await PlaceService.getPlaceById(placeId);
+
     if(place){
         res.status(200).json(place);
     } else {
         res.status(404).end();
+    }
+}
+
+export async function removeById(req: Request, res: Response): Promise<void> {
+    const placeId: string = req['swagger'].params['placeId'].value;
+
+    try {
+        const deletedPlace = await PlaceService.removePlaceById(placeId);
+    
+        if (deletedPlace) {
+            res.status(200).json(deletedPlace);
+        } else {
+            res.status(404).end();
+        }
+    } catch(error) {
+        res.status(500).json({
+            code: error.code,
+            error: error.message
+        });
     }
 }
