# config/swagger.yaml
@@ -94,6 +94,26 @@ paths:
             $ref: '#/definitions/Place'
         '404':
           description: Place not found
+    delete:
+      summary: Removes a place given its ID
+      description: >
+        This endpoint allows users to delete a place given its ID
+      operationId: removeById
+      tags:
+        - place
+      parameters:
+        - in: path
+          name: placeId
+          description: The place identifier
+          type: string
+          required: true
+      responses:
+        '200':
+          description: The place has been removed successfully
+        '404':
+          description: Place not found
+        '500':
+          description: There was an error removing the place
 
 
 definitions:
